--- a/store/angular.json
+++ b/store/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "0a10cb14-3579-4763-87c6-44e34ba7f2d8"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
